# QSD-RL_monitoring-2QG

./: .gitignore  README.md
data/ion-trap/configs/default_10/: experiment.cfg  interaction.cfg  mode-0.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/default_2/: experiment.cfg  interaction.cfg  mode-7.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/default_3/: experiment.cfg  interaction.cfg  mode-1.cfg  mode-8.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/default_7/: experiment.cfg  interaction.cfg  mode-6.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/default_cooling/: experiment.cfg  interaction.cfg  mode-7.cfg  mode-8.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/default_rl/: experiment.cfg  interaction.cfg  mode-0.cfg  mode-2.cfg  mode-3.cfg  mode-5.cfg  mode-6.cfg  solutions.cfg  trap.cfg
data/ion-trap/configs/shelving/: experiment.cfg  interaction.cfg  mode-2.cfg  (+4 more)
data/ion-trap/trap-parameters/: eta_list_10.npy  eta_list_3.npy  eta_list_36.npy  eta_list_4.npy  eta_list_5.npy  eta_list_6.npy  eta_list_8.npy  eta_list_9.npy  mod_eta_10_36_pair(25,27).npy  mod_eta_14_36_pair(25,27).npy  mod_nu_10_36_pair(25,27).npy  mod_nu_14_36_pair(25,27).npy  nu_list_10.npy  nu_list_3.npy  nu_list_36.npy  nu_list_4.npy  nu_list_5.npy  nu_list_6.npy  nu_list_8.npy  nu_list_9.npy
include/qsd/: ACG.cpp  ACG.h  Operator.cpp  Operator.h  PrimOp.h  RNG.cpp  State.cpp  State.h  Traject.cpp  Traject.h  qsd_simulation.cpp  qsd_simulation.h
report/: report.md
src/: CMakeLists.txt
src/SQUID/: CMakeLists.txt
src/SQUID/cv-qsd-1.3.5/: main.cpp
src/SQUID/experiment/: cv_cqed.cpp  cv_cqed.h
src/cooling-dynamics/: .gitignore  CMakeLists.txt
src/cooling-dynamics/experiment/: h_config.cpp  ion_trap.cpp  ion_trap.h  l_config.cpp
src/cooling-dynamics/ion-trap-cooling/: main.cpp
src/dynamical-decoupling/: CMakeLists.txt
src/dynamical-decoupling/experiment/: ion_trap.cpp  l_config.cpp  utilities.cpp
src/dynamical-decoupling/ion-trap-dyn_decoupling/: main.cpp
src/ion-trap/: CMakeLists.txt
src/ion-trap/experiment/: h_config.cpp  ion_trap.cpp  ion_trap.h  utilities.h
src/ion-trap/ion-trap-qsd-1.3.5/: main.cpp
src/ion-trap/ion-trap-rl/: ion_trap_env.py  main.cpp  ppo.py
src/qsd-playground/: CMakeLists.txt
utilities/: .gitignore
utilities/src/: ACstarkutility.py  IonTraputility.py  IonTraputility_crystal.py  IonTraputility_decoherence.py  bnm.xlsx  helper.py  parameters.py  pulse_shaping.py  pulse_shaping_old.py  qubit5_Hamiltonian.py  utilities.py  utilities_old.py  wigner.py  yb_energy_levels.csv  yb_matrix_elements.csv
(+789 files in other folders)
